--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "localforage": "^1.10.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-gtag-next": "^1.14.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
