--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-vue-next": "^0.42.0",
     "core-js": "^3.8.3",
+    "html2canvas": "^1.4.1",
     "localforage": "^1.10.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
